--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<br>
   <title>Digital Shop</title>
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
   <style>
@@ -50,32 +51,63 @@
        color: #ffffff;
        text-shadow; 0px 2px 3px #555;
        }
+
+    input[type=text] {
+      width: 130px;
+      box-sizing: border-box;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+      background-color: white;
+      background-position: 10px 10px;
+      background-repeat: no-repeat:
+      padding: 12px 20px 12px 40px;
+      -webkit-transition: width 0.4s ease-in-out;
+      transition: width 0.4s ease-in-out;
+      }
   </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-   <div class="container-fluid">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="">Digital Shop</a>
+     <button type="button" class="navbar-toggle collapsed"
+     data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+     aria-controls="navbar">
+      <span class"sr-only">Toggle navigation</span>
+      <span class"icon-bar"></span>
+      <span class"icon-bar"></span>
+      <span class"icon-bar"></span>
+     </button>
+     <a class="navbar-brand" href="/">Home</a>
     </div>
+    <div id="navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="">Home</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="">Video Games
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="Featured">Featured</a></li>
-          <li><a href="Playstation4">Playstation 4</a></li>
-          <li><a href="Xboxone">Xbox One</a></li>
-          <li><a href="Wiiu">Wii U</a></li>
+          <li><a href="/Videogames">Video Games</a></li>
+          <li><a href="/Movies">Movies</a></li>
+          <li><a href="/Music">Music</a></li>
         </ul>
-      </li>
-      <li><a href="Movies">Movies</a></li>
-      <li><a href="Music">Music</a></li>
+        <ul class="nav navbar-nav navbar-right">
+      <li><a href="/Signuplogin"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/Signuplogin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
+       <form accept-charset="utf-8" action="localhost:5000/search.php" id="searchbox"
+       action="" class="navbar-from navbar-left" method="GET"
+       name="site-search" role="search">
+         <div class="input-group">
+           <input id="search" type="text"  class="form-control" placeholder="Search">
+           <div class="input-group-btn">
+             <button class="btn btn-default" type="submit">
+               <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
+        </div>
+      </form>
    </div>
   </nav>
+
+
 
   <div class="container">
        <h1><a> Digital Shop </a> </h1>
