--- a/templates/base.html
+++ b/templates/base.html
@@ -117,79 +117,79 @@
  <a href="uncharted4"><img src="static/uncharted4.jpg" alt="Uncharted 4" style=
 "width:200px;height:320px;"></a>
 
+ <a href="avengers"><img src="static/avengers.jpg" alt="Avengers" style=
+"width:200px;height:320px;"></a>
+
+ <a href="foofighters"><img src="static/foofighters.jpg" alt="Foo Fighters" style=
+"width:200px;height:320px;"></a>
+
  <a href="halo5"><img src="static/halo5.jpg" alt="Halo 5" style=
+"width:200px;height:320px;"></a>
+
+ <a href="inception"><img src="static/inception.jpg" alt="Inception" style=
+"width:200px;height:320px;"></a>
+
+ <a href="queen"><img src="static/queen.jpg" alt="Queen" style=
 "width:200px;height:320px;"></a>
 
  <a href="smashbrosu"><img src="static/smashbrosu.jpg" alt="Super Smash Bros Wii U" style=
 "width:200px;height:320px;"></a>
 
+ <a href="batmanvsuperman"><img src="static/batmanvsuperman.jpg" alt="Batman V Superman" style=
+"width:200px;height:320px;"></a>
+
+ <a href="redhot"><img src="static/redhot.jpg" alt="Red Hot Chillie Peppers" style=
+"width:200px;height:320px;"></a>
+
  <a href="thelastofus"><img src="static/thelastofus.jpg" alt="The Last of us" style=
+"width:200px;height:320px;"></a>
+
+ <a href="guardians"><img src="static/guardians.jpg" alt="Guardians of the
+ Galaxy" style=
+"width:200px;height:320px;"></a>
+
+ <a href="beatles"><img src="static/beatles.jpg" alt="The Beatles" style=
 "width:200px;height:320px;"></a>
 
  <a href="rarereplay"><img src="static/rarereplay.jpg" alt="Rare Replay" style=
 "width:200px;height:320px;"></a>
 
+ <a href="matrix"><img src="static/matrix.jpg" alt="The Matrix" style=
+"width:200px;height:320px;"></a>
+
+ <a href="bobmarley"><img src="static/bobmarley.jpg" alt="Bob Marley" style=
+"width:200px;height:320px;"></a>
+
  <a href="mariokart8"><img src="static/mariokart8.jpg" alt="Mario Kart 8" style=
+"width:200px;height:320px;"></a>
+
+ <a href="godfather"><img src="static/godfather.jpg" alt="The Godfather" style=
+"width:200px;height:320px;"></a>
+
+ <a href="blink"><img src="static/blink.jpg" alt="Blink 182" style=
 "width:200px;height:320px;"></a>
 
  <a href="infamous"><img src="static/infamousss.jpg" alt="Infamous Second Son" style=
 "width:200px;height:320px;"></a>
 
+ <a href="whiplash"><img src="static/whiplash.jpg" alt="Whiplash" style=
+"width:200px;height:320px;"></a>
+
+ <a href="oasis"><img src="static/oasis.jpg" alt="Oasis" style=
+"width:200px;height:320px;"></a>
+
  <a href="deadrising3"><img src="static/deadrising3.jpg" alt="Dead Rising 3" style=
 "width:200px;height:320px;"></a>
 
+ <a href="darkknight"><img src="static/darkknight.jpg" alt="The Dark Knight" style=
+"width:200px;height:320px;"></a>
+
+ <a href="gunsandroses"><img src="static/gunsandroses.jpg" alt="Guns and Roses" style=
+"width:200px;height:320px;"></a>
+
  <a href="supermariomaker"><img src="static/supermariomaker.jpg" alt="Mario Maker" style=
-"width:200px;height:320px;">></a>
+"width:200px;height:320px;"></a>
 
- <a href="bioshock"><img src="static/bioshock.jpg" alt="Bioshock the Collection" style=
-"width:200px;height:320px;">></a>
-
- <a href="tombraider"><img src="static/tombraider.jpg" alt="Rise of the Tomb Raider" style=
-"width:200px;height:320px;">></a>
-
- <a href="supermario3dworld"><img src="static/supermario3dworld.jpg" alt="Super Mario 3d World" style=
-"width:200px;height:320px;">></a>
-
- <a href="raymanlegends"><img src="static/raymanlegends.jpg" alt="Rayman Legends" style=
-"width:200px;height:320px;">></a>
-
- <a href="dyinglight"><img src="static/dyinglight.jpg" alt="Dying Light" style=
-"width:200px;height:320px;">></a>
-
- <a href="windwakerhd"><img src="static/windwakerhd.jpg" alt="The Legend of Zelda: Wind Waker HD" style=
-"width:200px;height:320px;">></a>
-
- <a href="batman"><img src="static/arkhamknight.jpg" alt="Batman Arkham Knight" style=
-"width:200px;height:320px;">></a>
-
- <a href="starfoxzero"><img src="static/starfoxzero.jpg" alt="Star Fox Zero" style=
-"width:200px;height:320px;">></a>
-
- <a href="metalgearsolidv"><img src="static/metalgearsolidv.jpg" alt="Metal Gear Solid V: The definate
-Experience" style=
-"width:200px;height:320px;">></a>
-
- <a href="twilightprincesshd"><img src="static/twilightprincesshd.jpg" alt="The Legend of Zelda: Twilight
-Princess HD" style=
-"width:200px;height:320px;">></a>
-
- <a href="fallout4"><img src="static/fallout4.jpg" alt="Fallout 4" style=
-"width:200px;height:320px;">></a>
-
- <a href="pikmin3"><img src="static/pikmin3.jpg" alt="Pikmin 3" style=
-"width:200px;height:320px;">></a>
-
- <a href="bloodborne"><img src="static/bloodborne.jpg" alt="Bloodborne" style=
-"width:200px;height:320px;">></a>
-
- <a href="killerinstinct"><img src="static/killerinstinct.jpg" alt="Killer Instinct" style=
-"width:200px;height:320px;">></a>
-
- <a href="splatoon"><img src="static/splatoon.jpg" alt="Splatoon" style=
-"width:200px;height:320px;">></a>
-
- <a href="codghosts"><img src="static/codghosts.jpg" alt="Call of Duty: Ghosts" style=
-"width:200px;height:320px;">></a>
 
       {% endblock %}
   </div>
