Worked on login

--- a/templates/Movies.html
+++ b/templates/Movies.html
@@ -2,89 +2,63 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-  <p>These are the popular new Xbox One games</p>
+  <p>These are the popular movies we have to sell right now</p>
 
- <a href="halo5"><img src="/static/halo5.jpg" alt="Halo 5" style=
-"width:200px;height:320px;"></a>
+ <a href="avengers"><img src="/static/avengers.jpg" alt="Avengers" style=
+"width:280px;height:420px;"></a>
 
- <a href="rarereplay"><img src="/static/rarereplay.jpg" alt="Rare Replay" style=
-"width:200px;height:320px;"></a>
+ <a href="matrix"><img src="/static/matrix.jpg" alt="Matrix" style=
+"width:280px;height:420px;"></a>
 
- <a href="deadrising3"><img src="/static/deadrising3.jpg" alt="Dead Rising 3" style=
-"width:200px;height:320px;"></a>
+ <a href="godfather"><img src="/static/godfather.jpg" alt="The Godfather" style=
+"width:280px;height:420px;"></a>
 
- <a href="quantumbreak"><img src="/static/quantumbreak.jpg" alt="Quantum Break" style=
-"width:200px;height:320px;"></a>
+ <a href="batmanvsuperman"><img src="/static/batmanvsuperman.jpg" alt="Batman v
+ Superman" style=
+"width:280px;height:420px;"></a>
 
- <a href="forza5"><img src="/static/forza.jpg" alt="Forza Motorsport 5" style=
-"width:200px;height:320px;"></a>
+ <a href="starwars"><img src="/static/starwars.jpg" alt="Star Wars: A new Hope" style=
+"width:280px;height:420px;"></a>
 
- <a href="sunsetoverdrive"><img src="/static/sunsetoverdrive.jpg" alt="Sunset Overdrive" style=
-"width:200px;height:320px;"></a>
+ <a href="guardians"><img src="/static/guardians.jpg" alt="Guardians
+ of the Galaxy" style=
+"width:280px;height:420px;"></a>
 
- <a href="gearsofwar4"><img src="/static/gearsofwar4.jpg" alt="Gears of War 4" style=
-"width:200px;height:320px;"></a>
+ <a href="exmachina"><img src="/static/exmachina.jpg" alt="Ex Machina" style=
+"width:280px;height:420px;"></a>
 
- <a href="halotmcc"><img src="/static/halotmcc.jpg" alt="Halo: The Master Chief Collection" style=
-"width:200px;height:320px;"></a>
+ <a href="suicidesquad"><img src="/static/suicidesquad.jpg" alt="Suicide Squad" style=
+"width:280px;height:420px;"></a>
 
- <a href="titanfall"><img src="/static/titianfall.jpg" alt="TitanFall" style=
-"width:200px;height:320px;"></a>
+ <a href="inception"><img src="/static/inception.jpg" alt="Inception" style=
+"width:280px;height:420px;"></a>
 
- <a href="bioshock"><img src="/static/bioshock.jpg" alt="Bioshock the Collection" style=
-"width:200px;height:320px;"></a>
+ <a href="scream"><img src="/static/scream.jpg" alt="Scream" style=
+"width:280px;height:420px;"></a>
 
- <a href="tombraider"><img src="/static/tombraider.jpg" alt="Rise of the Tomb Raider" style=
-"width:200px;height:320px;"></a>
+ <a href="whiplash"><img src="/static/whiplash.jpg" alt="Whiplash" style=
+"width:280px;height:420px;"></a>
 
- <a href="gtav"><img src="/static/gta5.jpg" alt="Grand Theft Auto: V" style=
-"width:200px;height:320px;"></a>
+ <a href="toystory"><img src="/static/toystory.jpg" alt="Toy Story" style=
+"width:280px;height:420px;"></a>
 
- <a href="raymanlegends"><img src="/static/raymanlegends.jpg" alt="Rayman Legends" style=
-"width:200px;height:320px;"></a>
+ <a href="skyfall"><img src="/static/skyfall.jpg" alt="007: Skyfall" style=
+"width:280px;height:420px;"></a>
 
- <a href="dyinglight"><img src="/static/dyinglight.jpg" alt="Dying Light" style=
-"width:200px;height:320px;"></a>
+ <a href="shawshank"><img src="/static/shawshank.jpg" alt="Shawshank" style=
+"width:280px;height:420px;"></a>
 
- <a href="destiny"><img src="/static/destiny.jpg" alt="Destiny" style=
-"width:200px;height:320px;"></a>
+ <a href="darkknight"><img src="/static/darkknight.jpg" alt="The Dark Knight" style=
+"width:280px;height:420px;"></a>
 
- <a href="batman"><img src="/static/arkhamknight.jpg" alt="Batman Arkham Knight" style=
-"width:200px;height:320px;"></a>
-
- <a href="guitarherolive"><img src="/static/guitarherolive.jpg" alt="Guitar Hero Live" style=
-"width:200px;height:320px;"></a>
-
- <a href="metalgearsolidv"><img src="/static/metalgearsolidv.jpg" alt="Metal Gear Solid V: The definate
-Experience" style=
-"width:200px;height:320px;"></a>
-
- <a href="codbo2"><img src="/static/codbo2.jpg" alt="Call of Duty: Black Ops 2" style=
-"width:200px;height:320px;"></a>
-
- <a href="fallout4"><img src="/static/fallout4.jpg" alt="Fallout 4" style=
-"width:200px;height:320px;"></a>
-
- <a href="nba2k16"><img src="/static/nba2k16.jpg" alt="NBA2K16" style=
-"width:200px;height:320px;"></a>
-
- <a href="killerinstinct"><img src="/static/killerinstinct.jpg" alt="Killer Intinct" style=
-"width:200px;height:320px;"></a>
-
- <a href="darksouls3"><img src="/static/darksouls3.jpg" alt="Dark Souls 3" style=
-"width:200px;height:320px;"></a>
- 
- <a href="thewitcher"><img src="/static/thewitcher.jpg" alt="The Witcher 3" style=
-"width:200px;height:320px;"></a>
- 
- <a href="codghosts"><img src="/static/codghosts.jpg" alt="Call of Duty: Ghosts" style=
-"width:200px;height:320px;"></a>
-
+ <a href="spiderman"><img src="/static/spiderman.jpg" alt="Spiderman" style=
+"width:280px;height:420px;"></a>
 {% endblock %}
