--- a/templates/Music.html
+++ b/templates/Music.html
@@ -2,90 +2,64 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-  <p>These are the popular new Wii U games</p>
+  <p>This is the popular Music we are selling</p>
 
- <a href="smashbrosu"><img src="/static/smashbrosu.jpg" alt="Super Smash Bros" style=
-"width:200px;height:320px;"></a>
+ <a href="foofighters"><img src="/static/foofighters.jpg" alt="foofighters" style=
+"width:280px;height:320px;"></a>
 
- <a href="mariokart8"><img src="/static/mariokart8.jpg" alt="Mario Kart 8" style=
-"width:200px;height:320px;"></a>
+ <a href="nirvana"><img src="/static/nirvana.jpg" alt="Nirvana" style=
+"width:280px;height:320px;"></a>
 
- <a href="supermariomaker"><img src="/static/supermariomaker.jpg" alt="Super Mario Maker" style=
-"width:200px;height:320px;"></a>
+ <a href="gunsandroses"><img src="/static/gunsandroses.jpg" alt="Guns and Roses" style=
+"width:280px;height:320px;"></a>
 
- <a href="supermario3dworld"><img src="/static/supermario3dworld.jpg" alt="Super Mario 3D World" style=
-"width:200px;height:320px;"></a>
+ <a href="bobmarley"><img src="/static/bobmarley.jpg" alt="Bob Marley" style=
+"width:280px;height:320px;"></a>
 
- <a href="windwaker"><img src="/static/windwakerhd.jpg" alt="The Legend of Zelda: Wind Waker" style=
-"width:200px;height:320px;"></a>
+ <a href="blink"><img src="/static/blink.jpg" alt="Blink 182" style=
+"width:280px;height:320px;"></a>
 
- <a href="starfoxzero"><img src="/static/starfoxzero.jpg" alt="Star Fox Zero" style=
-"width:200px;height:320px;"></a>
+ <a href="sum41"><img src="/static/sum41.jpg" alt="Sum 41" style=
+"width:280px;height:320px;"></a>
 
- <a href="twilightprincesshd"><img src="/static/twilightprincesshd.jpg" alt="The Legend of Zelda: Twilight
-Princess HD" style=
-"width:200px;height:320px;"></a>
+ <a href="u2"><img src="/static/u2.jpg" alt="U2" style=
+"width:280px;height:320px;"></a>
 
- <a href="pikmin3"><img src="/static/pikmin3.jpg" alt="Pikmin 3" style=
-"width:200px;height:320px;"></a>
+ <a href="redhot"><img src="/static/redhot.jpg" alt="Red Hot Chillie Peppers" style=
+"width:280px;height:320px;"></a>
 
- <a href="splatoon"><img src="/static/splatoon.jpg" alt="Splatoon" style=
-"width:200px;height:320px;"></a>
+ <a href="oasis"><img src="/static/oasis.jpg" alt="Oasis" style=
+"width:280px;height:320px;"></a>
 
- <a href="hyrulewarriors"><img src="/static/hyrulewarriors.jpg" alt="Hyrule Warriors" style=
-"width:200px;height:320px;"></a>
+ <a href="meatloaf"><img src="/static/meatloaf.jpg" alt="Meatloaf" style=
+"width:280px;height:320px;"></a>
 
- <a href="bayonetta2"><img src="/static/bayoneta2.jpg" alt="Bayonetta 2" style=
-"width:200px;height:320px;"></a>
+ <a href="bonjovi"><img src="/static/bonjovi.jpg" alt="Bon Jovi" style=
+"width:280px;height:320px;"></a>
 
- <a href="donkeykongcountry"><img src="/static/donkeykongcountrytf.jpg" alt="Donkey Kong Country: Tropical
-Freeze" style=
-"width:200px;height:320px;"></a>
+ <a href="beatles"><img src="/static/beatles.jpg"
+ alt="The Beatles" style=
+"width:280px;height:320px;"></a>
 
- <a href="raymanlegends"><img src="/static/raymanlegends.jpg" alt="Rayman Legends" style=
-"width:200px;height:320px;"></a>
+ <a href="adele"><img src="/static/adele.jpg" alt="Adele" style=
+"width:280px;height:320px;"></a>
 
- <a href="supermariobrosu"><img src="/static/supermariobrosu.jpg" alt="Super Mario Bros U" style=
-"width:200px;height:320px;"></a>
+ <a href="queen"><img src="/static/queen.jpg" alt="Queen" style=
+"width:280px;height:320px;"></a>
 
- <a href="nintendoland"><img src="/static/nintendoland.jpg" alt="Nintendoland" style=
-"width:200px;height:320px;"></a>
+ <a href="michaeljackson"><img src="/static/michaeljackson.jpg" alt="Michael
+ Jackson" style=
+"width:280px;height:320px;"></a>
 
- <a href="yoshiswoollyworld"><img src="/static/yoshiswoollyworld.jpg" alt="Yoshi's Woolly World" style=
-"width:200px;height:320px;"></a>
-
- <a href="pokkentournament"><img src="/static/pokkentournament.jpg" alt="Pokken Tournament" style=
-"width:200px;height:320px;"></a>
-
- <a href="xenobladechroniclesx"><img src="/static/xenobladechronicles.jpg" alt="Xenoblade Chronicles X" style=
-"width:200px;height:320px;"></a>
-
- <a href="codbo2"><img src="/static/codbo2.jpg" alt="Call of Duty: Black Ops 2" style=
-"width:200px;height:320px;"></a>
-
- <a href="thewonderful101"><img src="/static/thewonderful101.jpg" alt="The Wonderful 101" style=
-"width:200px;height:320px;"></a>
-
- <a href="marioandsonic"><img src="/static/marioandsonic.jpg" alt="Mario and Sonic" style=
-"width:200px;height:320px;"></a>
-
- <a href="captaintoad"><img src="/static/captaintoad.jpg" alt="Captain Toad: Treasure Tracker" style=
-"width:200px;height:320px;"></a>
-
- <a href="gameandwario"><img src="/static/wario.jpg" alt="Game and Wario" style=
-"width:200px;height:320px;"></a>
-
- <a href="soniclostworld"><img src="/static/soniclostworld.jpg" alt="Sonic Lost World" style=
-"width:200px;height:320px;"></a>
-
- <a href="codghosts"><img src="/static/codghosts.jpg" alt="Call of Duty: Ghosts" style=
-"width:200px;height:320px;"></a>
+ <a href="falloutboy"><img src="/static/falloutboy.jpg" alt="Fallout Boy" style=
+"width:280px;height:320px;"></a>
 
  {% endblock %}
