--- a/templates/Videogames.html
+++ b/templates/Videogames.html
@@ -10,83 +10,53 @@
 {% endblock %}
 
 {% block content %}
-  <p>These are the popular new Video games</p>
+  <p>These are the popular new Video games we are selling</p>
 
  <a href="uncharted4"><img src="/static/uncharted4.jpg" alt="Uncharted 4" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="halo5"><img src="/static/halo5.jpg" alt="Halo 5" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="smashbrosu"><img src="/static/smashbrosu.jpg" alt="Super Smash Bros Wii U" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="thelastofus"><img src="/static/thelastofus.jpg" alt="The Last of us" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="rarereplay"><img src="/static/rarereplay.jpg" alt="Rare Replay" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="mariokart8"><img src="/static/mariokart8.jpg" alt="Mario Kart 8" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="infamous"><img src="/static/infamousss.jpg" alt="Infamous Second Son" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="deadrising3"><img src="/static/deadrising3.jpg" alt="Dead Rising 3" style=
-"width:200px;height:320px;"></a>
+"width:270px;height:420px;"></a>
 
  <a href="supermariomaker"><img src="/static/supermariomaker.jpg" alt="Mario Maker" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="bioshock"><img src="/static/bioshock.jpg" alt="Bioshock the Collection" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="tombraider"><img src="/static/tombraider.jpg" alt="Rise of the Tomb Raider" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="supermario3dworld"><img src="/static/supermario3dworld.jpg" alt="Super Mario 3d World" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="raymanlegends"><img src="/static/raymanlegends.jpg" alt="Rayman Legends" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="dyinglight"><img src="/static/dyinglight.jpg" alt="Dying Light" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
  <a href="windwakerhd"><img src="/static/windwakerhd.jpg" alt="The Legend of Zelda: Wind Waker HD" style=
-"width:200px;height:320px;">></a>
+"width:270px;height:420px;">></a>
 
- <a href="batman"><img src="/static/arkhamknight.jpg" alt="Batman Arkham Knight" style=
-"width:200px;height:320px;">></a>
-
- <a href="starfoxzero"><img src="/static/starfoxzero.jpg" alt="Star Fox Zero" style=
-"width:200px;height:320px;">></a>
-
- <a href="metalgearsolidv"><img src="/static/metalgearsolidv.jpg" alt="Metal Gear Solid V: The definate
-Experience" style=
-"width:200px;height:320px;">></a>
-
- <a href="twilightprincesshd"><img src="/static/twilightprincesshd.jpg" alt="The Legend of Zelda: Twilight
-Princess HD" style=
-"width:200px;height:320px;">></a>
-
- <a href="fallout4"><img src="/static/fallout4.jpg" alt="Fallout 4" style=
-"width:200px;height:320px;">></a>
-
- <a href="pikmin3"><img src="/static/pikmin3.jpg" alt="Pikmin 3" style=
-"width:200px;height:320px;">></a>
-
- <a href="bloodborne"><img src="/static/bloodborne.jpg" alt="Bloodborne" style=
-"width:200px;height:320px;">></a>
-
- <a href="killerinstinct"><img src="/static/killerinstinct.jpg" alt="Killer Instinct" style=
-"width:200px;height:320px;">></a>
-
- <a href="splatoon"><img src="/static/splatoon.jpg" alt="Splatoon" style=
-"width:200px;height:320px;">></a>
-
- <a href="codghosts"><img src="/static/codghosts.jpg" alt="Call of Duty: Ghosts" style=
-"width:200px;height:320px;">></a>
-
+ <a href="gta5"><img src="/static/gta5.jpg" alt="Grand Theft Auto V" style=
+"width:270px;height:420px;">></a>
 {% endblock %}
